--- a/templates/course_comment.html
+++ b/templates/course_comment.html
@@ -102,12 +102,12 @@
                         <div class="box mb40">
                         <h4>资料下载</h4>
                         <ul class="downlist">
-                            
+                            {% for course_resourse in course.courseresource_set.get_queryset  %}
                             <li>
                                 <span ><i class="aui-iconfont aui-icon-file"></i>&nbsp;&nbsp;{{ course_resourse.name }}</span>
                                 <a href="{{ MEDIA_URL }}{{ course_resource.download }}" class="downcode" target="_blank" download="" data-id="274" title="">下载</a>
                             </li>
-                            
+                            {% endfor %}
                         </ul>
                     </div>
                         <div class="box mb40">
