--- a/templates/course_video.html
+++ b/templates/course_video.html
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div id="notice" class="clearfix">
-                    <div class="l"> <strong>课程公告:</strong> <a  href="javascript:void(0)">Spring的文档以及相关的jar文件已上传</a> </div>
+                    <div class="l"> <strong>课程公告:</strong> <a  href="javascript:void(0)">相关文档已上传</a> </div>
                 </div>
 
                 <div class="mod-chapters">
@@ -78,7 +78,7 @@
                         <ul class="video">
                             {% for video in lesson.get_lesson_video %}
                             <li>
-                                <a target="_blank" href='{% url "course:vide_play" video.id %}' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_times }})
+                                <a target="_blank" href='/video/3363' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_times }})
                                     <i class="study-state"></i>
                                 </a>
                             </li>
@@ -96,7 +96,7 @@
                     <div class="box mb40">
                         <h4>资料下载</h4>
                         <ul class="downlist">
-                            {% for course_resourse in course_resourses  %}
+                            {% for course_resourse in course.courseresource_set.get_queryset %}
                             <li>
                                 <span ><i class="aui-iconfont aui-icon-file"></i>&nbsp;&nbsp;{{ course_resourse.name }}</span>
                                 <a href="{{ MEDIA_URL }}{{ course_resource.download }}" class="downcode" target="_blank" download="" data-id="274" title="">下载</a>
