--- a/templates/org_detail_course.html
+++ b/templates/org_detail_course.html
@@ -12,12 +12,12 @@ li>{% block page_path %}机构课程{% endblock %}</li>
     <div class="brief group_list">
         {% for course in all_courses %}
             <div class="module1_5 box">
-                <a class="comp-img-box" href="course-detail.html">
+                <a class="comp-img-box" href="{% url 'course:course_detail' course.id %}">
 
-                    <img width="214" height="195" src="{% static 'media/courses/2016/11/mysql.jpg' %}"/>
+                    <img width="214" height="195" src="{{ MEDIA_URL }}{{ course.image }}"/>
                 </a>
                 <div class="des">
-                    <a href="course-detail.html"><h2>{{ course.name }}</h2></a>
+                    <a href="{% url 'course:course_detail' course.id %}"><h2>{{ course.name }}</h2></a>
                     <span class="fl">课时：{{ course.learn_times }}<i class="key">0</i></span>
                     <span class="fr">学习人数：{{ course.students }}</span>
                 </div>
