--- a/templates/org_detail_homepage.html
+++ b/templates/org_detail_homepage.html
@@ -7,7 +7,7 @@
 <div class="right companycenter layout grouping" >
     <div class="head">
         <h1>全部课程</h1>
-        <a class="green fr more" href="org_detail_course.html">查看更多  >  </a>
+        <!--<a class="green fr more" href="org_detail_course.html">查看更多  >  </a>-->
     </div>
     <div class="brief group_list">
         {% for course in all_courses %}
@@ -32,7 +32,7 @@
 <div class="right companycenter layout" >
     <div class="head">
         <h1>机构教师</h1>
-        <a class="green fr more" href="org_detail_teachers.html">查看更多  >  </a>
+        <!--<a class="green fr more" href="org_detail_teachers.html">查看更多  >  </a>-->
     </div>
 
     {% for teacher in all_teacher %}
