--- a/templates/org_list.html
+++ b/templates/org_list.html
@@ -75,12 +75,13 @@
                          </a>
                     </div>
                     <ul class="cont">
-                        <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                        <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
+                        <li class="first"><p class="pic9">课程数：<span>{{ course_org.course_nums }}</span></p><p class="c7">学习人数：<span>{{ course_org.students }}</span></p></li>
+                        <li class="c8" style="padding-left:18px;">{{ course_org.address }}</li>
                         <li class="pic10" style="padding-left:18px;">经典课程：
-                                <a href="/diary/19/">c语言基础入门</a>
+                            {% for course in course_org.course_set.get_quetyset %}
+                                <a href="{ url 'course:course_detail' course.id }">c语言基础入门</a>
+                            {% endfor %}
 
-                                <a href="/diary/16/">数据库基础</a>
                         </li>
                     </ul>
                 </dd>
