--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -218,6 +218,7 @@
                 </div>
                 <input type='hidden' name='csrfmiddlewaretoken' value='DaP7IUKm9FA9nELA9YUlYYWpyIDdCiIP' />
             <input type='hidden' name='csrfmiddlewaretoken' value='799Y6iPeEDNSGvrTu3noBrO4MBLv6enY' />
+            {% csrf_token %}
             </form>
         </div>
     </div>
