--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -30,18 +30,18 @@
 
                         <dl class="user fr">
                             <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
-                            <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ user.image }}"/></dt>
+                            <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                         </dl>
                         <div class="userdetail">
                         <dl>
-                            <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ user.image }}"/></dt>
+                            <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             <dd>
-                                <h2>{{ user.nick_name }}</h2>
-                                <p>{{ user.username }}</p>
+                                <h2>{{ request.user.nick_name }}</h2>
+                                <p>{{ request.user.username }}</p>
                             </dd>
                         </dl>
                         <div class="btn">
-                            <a class="personcenter fl" href="user_info.html">进入个人中心</a>
+                            <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
                             <a class="fr" href="logout.html">退出</a>
                         </div>
                         </div>
@@ -51,13 +51,12 @@
                     </a>
                 </div>
             {% else %}
-                <div class="wp">
-                    <div class="fl"><p>服务电话：<b>23333333</b></p></div>
-                    <!--登录后跳转-->
+                <div class="wp"></div>
                     <a style="color:white" class="fr registerbtn" href="{% url "register" %}">注册</a>
                     <a style="color:white" class="fr loginbtn" href="{% url 'login'%}?next={{ request.path }}">登录</a>
-                </div>
+            </div>
             {% endif %}
+        </div>
 
     <div class="middle companyheader">
         <div class="wp">
