--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -31,7 +31,7 @@
                         <div class="fl"><p>服务电话：<b>33333333</b></p></div>
                         <div class="personal">
                             <dl class="user fr">
-                                <dd>{{ user.nick_name }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
                                 <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
@@ -92,7 +92,7 @@
         <ul>
             <li class="active2"><a href="{% url 'users:user_info' %}">个人资料</a></li>
             <li ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
-            <li ><a href="usercenter-fav-course.html">我的收藏</a></li>
+            <li ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
             <li >
                 <a href="usercenter-message.html" style="position: relative;">
                     我的消息
